# BackgroundAnimator

./: CMakeLists.txt  README.md  main.cpp
Filesystem/: ResourcesChecker.cpp  ResourcesChecker.hpp
Instructions/: Instruction.cpp  Instruction.hpp  InstructionHelper.cpp  InstructionHelper.hpp  InstructionParser.cpp  InstructionParser.hpp  InstructionProcessor.cpp  InstructionProcessor.hpp  InstructionWriter.cpp  InstructionWriter.hpp
Libraries/tweeny/doc/: Doxyfile.in  MANUAL.dox
Libraries/tweeny/include/: tween.tcc
Logging/: Logger.cpp  Logger.hpp
Player/: PreviewPlayer.cpp  PreviewPlayer.hpp
Resources/: MainState.txt  SelectMusicState.txt  StartState.txt
Settings/: GlobalSettings.cpp  GlobalSettings.hpp  MainButtonsSettings.cpp  MainButtonsSettings.hpp  ResourceContainer.cpp  ResourceContainer.hpp
States/: MainState.cpp  MainState.hpp  SelectMusicState.cpp  SelectMusicState.hpp  StartState.cpp  StartState.hpp  State.hpp
States/Controllers/: ColorController.cpp  ColorController.hpp  Controller.cpp  Controller.hpp
Window/: App.cpp  App.hpp  Window.cpp  Window.hpp
